@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right directio
class UserSession{
}

class AuthenticationFacade {
}

class AuthenticationRepository {
}

class Repositories {
}

class CreateOrderController {
}

class CreateOrderUI {
}

class User{
}

class OrderRepository{
}

class Order{
}

Repositories -> Repositories : instances

CreateOrderUI .> CreateOrderController

CreateOrderController ..> Repositories

Repositories "1" --> "1" AuthenticationRepository : has

CreateOrderController ..> AuthenticationRepository

CreateOrderController ..> OrderRepository

AuthenticationRepository "1" --> "1" AuthenticationFacade : has

AuthenticationFacade "1" --> "1" UserSession : has

UserSession "1" --> "1" User : has

Repositories "1" --> "1" OrderRepository : has

OrderRepository "1" --> "*" Order : has

@enduml